<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Finance Tracker</string>
    <string name="nav_header_subtitle">djuraev.elbek@mob-school.yaconnect.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about_content">Домашнее задание: Трекер финансов</string>
    <string name="navBackBtn_contentDesc">Navigation back button</string>
    <string name="amount">Amount</string>
    <string name="operationType">Operation type</string>
    <string name="dollar">Dollar</string>
    <string name="ruble">Ruble</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="confirm">Confirm</string>
    <string name="add_transaction">Add transaction</string>
    <string name="unknown_error">Unknown error</string>
    <string name="trans_added">Transaction added</string>
</resources>
